# MathExpression

./: .gitignore  CMakeLists.txt  README.md  TC.cmake
include/: Error.hpp  Lexer.hpp  Token.hpp  types.hpp
src/: Error.cpp  Lexer.cpp  Token.cpp  main  main.cpp
